--- a/pages/modelos/peugeot/307.html
+++ b/pages/modelos/peugeot/307.html
@@ -10,7 +10,7 @@
     <header>
 
         <p>
-            Hola, esta es una modificacion.
+            Holanda.
         </p>
         
     </header>
