--- a/pages/modelos/peugeot/307.html
+++ b/pages/modelos/peugeot/307.html
@@ -10,7 +10,7 @@
     <header>
 
         <p>
-            Modificacion en cinco partes.
+            Modificacion en siete partes.
         </p>
         
     </header>
