--- a/pages/brands.html
+++ b/pages/brands.html
@@ -7,9 +7,9 @@
     <title>Velocimetro</title>
 </head>
 <body>
-    <ul class="menu">
+    <ul class="flex-container-ver">
         <li><h2>Marcas</h2>
-            <ul>
+            <ul class="flex-container-hor">
                 <li><a href="/pages/marcas/audi.html" class="link">Audi</a></li>
                 <li><a href="/pages/marcas/alfaRomeo.html" class="link">Alfa Romeo</a></li>
                 <li><a href="/pages/marcas/astonMartin.html" class="link">Aston Martin</a></li>
@@ -64,7 +64,7 @@
             </ul>   
         </li>
         <li><h2>Escuderias</h2>
-            <ul>
+            <ul class="flex-container-hor">
                 <li><a href="/pages/marcas/abarth.html" class="link">Abarth</a></li>
                 <li><a href="/pages/marcas/alpina.html" class="link">Alpina</a></li>
                 <li><a href="/pages/marcas/brabus.html" class="link">Brabus</a></li>
@@ -72,7 +72,13 @@
                 <li><a href="/pages/marcas/shelby.html" class="link">Shelby</a></li>
             </ul>
         </li> 
-        <li><h2><a href="/index.html" class="link">Inicio</a></h2></li>   
+        <li>
+            <ul class="flex-container-hor">
+                <li>
+                    <h2><a href="/index.html" class="link">Inicio</a></h2>
+                </li>
+            </ul>    
+        </li>   
     </ul>
 
     <address class="address">
