--- a/pages/modelos/peugeot/207.html
+++ b/pages/modelos/peugeot/207.html
@@ -20,22 +20,22 @@
 
     <header>
 
-        <p>
+        <p class="paragraph">
             El Peugeot 207 Compact, es un automóvil del segmento B producido por el fabricante Peugeot para la región del Mercosur. Inicialmente, su producción tuvo inicio en la planta que Peugeot posee en Porto Real, Brasil, sin embargo y ante el estreno del Peugeot 208 en el año 2013, su producción terminó trasladándose hacia las factorías de El Palomar, en Argentina.
         </p>
-        <p>
+        <p class="paragraph">
             El vehículo en sí, no es más que una reformulación que se le practicara al modelo Peugeot 206, cuya producción y venta en el Mercosur se encontraba en su mejor momento, por lo que ante la alternativa de la sustitución de este modelo se terminaría planteando su renovación y continuación en venta y producción. Debido a que en Francia previamente se había lanzado otro modelo con la denominación Peugeot 207, fue que se terminaría optando por rebautizar al nuevo producto como 207 Compact. Además de su producción en el Mercosur, el coche fue exportado hacia Europa donde se lo denominó como 206 +.
         </p>
-        <p>
+        <p class="paragraph">
             Con la presentación del nuevo 207 Compact y la continuidad de la producción del Peugeot 206, Peugeot tomaría la decisión de reacomodar a ambos productos dentro de su catálogo, dejando al 206 como modelo de entrada de gama, segmento que había quedado vacío tras el cese de las ventas del Peugeot 106, mientras que el 207 Compact pasaría a convertirse en el modelo representante del Segmento B.
         </p>
-        <p>
+        <p class="paragraph">
             Con respecto a sus versiones, un avance que presentaba el 207 Compact respecto de su antecesor, fue la inclusión en su catálogo de una versión sedan 4 puertas, algo que si bien el 206 nunca presentó en el Mercosur, había sido previamente desarrollado por Peugeot para este modelo. Asimismo, la gama se completaría con la presencia de una versión Station Wagon y un hatchback de 5 puertas.
         </p>
-        <p>
+        <p class="paragraph">
             Además, la Peugeot Hoggar es una variante pickup del 207 Compact, que se fabricó en Brasil desde 2010 hasta 2014, como rival de la Chevrolet Montana, la Fiat Strada y la Volkswagen Saveiro.
         </p>
-        <p>
+        <p class="paragraph">
             Finalmente, tras la decisión de Peugeot de iniciar en el año 2008 la producción del Peugeot 208 en Brasil, la producción del 207 Compact sería trasladada hacia la localidad de El Palomar en Argentina, sustituyendo finalmente al modelo Peugeot 206 de la línea de montaje.
         </p>
 
@@ -45,7 +45,7 @@
 
     <header>
 
-        <table>
+        <table class="paragraph">
 
             <thead>
                 <tr>
@@ -69,7 +69,7 @@
 
         </table>
 
-        <table>
+        <table class="paragraph">
             <caption>Configuracion</caption>
             <td>Motor delantero transversal.</td>
         </table>
@@ -88,7 +88,7 @@
 
         </section>
 
-        <table>
+        <table class="paragraph">
 
             <tr>
                 <td><strong>Carrocerias:</strong></td>
